--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "serve": "nodemon server.js"
+        "serve": "nodemon server.js",
+        "start": "node index.js"
     },
     "author": "",
     "license": "ISC",
@@ -16,5 +17,8 @@
         "gh-pages": "^4.0.0",
         "mongoose": "^6.3.8",
         "nodemon": "^2.0.16"
+    },
+    "engines": {
+        "node": "14.16.0"
     }
 }
